# sql-llm-reasoning-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  import_dump.py  main.py  market_db_final.sql  migrate_db.py  package-lock.json  pyproject.toml  requirements.txt  schema.py  test.py  test_api.py  test_hil.py
.github/workflows/: deploy.yml
agents/: answering_agent.py  dsds.py  execute.py  explore_agent.py  market_data_agent.py  memory_agent.py  planner_agent.py  query_router.py  rag_agent.py  safty_agent.py  schema_static.py  sql_generator_agent.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/analysis/: mockService.js
frontend/src/components/Chat/: ChatInput.css  ChatInput.jsx  MessageBubble.css  MessageBubble.jsx  ThinkingIndicator.css  ThinkingIndicator.jsx
frontend/src/components/LandingPage/: AboutSection.jsx  AuthModal.jsx  ConnectDbModal.jsx  Footer.jsx  Header.jsx  HeroBackground.css  HeroBackground.jsx  LandingPage.css  LandingPage.jsx  LeadershipPage.jsx  MissionSection.jsx  NetworkAnimation.css  NetworkAnimation.jsx
frontend/src/components/Layout/: MainLayout.css  MainLayout.jsx  Sidebar.css  Sidebar.jsx
frontend/src/components/Visualizations/: DynamicChart.css  DynamicChart.jsx  ReasoningAccordion.css  ReasoningAccordion.jsx  ResultTable.css  ResultTable.jsx  (+2 more)
frontend/src/utils/: chartParser.js
rag/: embeddings.py  loaders.py  retriever.py  vectordb.py
rag/chroma_db/: chroma.sqlite3
tools/: connect_db.py  db_tools.py
utilis/: get_llm.py
