[project]
name = "sql-llm-agent"
version = "0.1.0"
description = "Natural language to SQL reasoning agent on Chinook DB"
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy",
    "pymysql",
    "python-dotenv",
    "langchain",
    "google-generativeai",
    "langgraph",
    "pip>=25.3",
    "langchain-community>=0.4.1",
    "pydantic>=2.12.5",
    "psycopg2>=2.9.11",
    "langchain-groq>=1.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]
